<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tela_creditos4">

    <TextView
        android:id="@+id/textViewDev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/desenvolvedor"
        android:textColor="@color/colorGrey"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewJac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/jackson_roberio"
        android:textColor="@color/colorGrey"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDev" />

    <TextView
        android:id="@+id/textViewContri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contribuidores"
        android:textColor="@color/colorGrey"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewJac" />

    <TextView
        android:id="@+id/textViewContriName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/everton_resende"
        android:textColor="@color/colorGrey"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewContri" />

    <TextView
        android:id="@+id/textViewDesign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/design"
        android:textColor="@color/colorGrey"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewContriName" />

    <TextView
        android:id="@+id/textViewSiteDesign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/https_www_flaticon_com"
        android:textColor="@color/colorGrey"
        android:textSize="24sp"
        android:autoLink="web"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDesign" />

    <TextView
        android:id="@+id/textViewAudio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/audio"
        android:textColor="@color/colorGrey"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSiteDesign" />

    <TextView
        android:id="@+id/textViewSiteAudio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/https_freesoung_org"
        android:textColor="@color/colorGrey"
        android:autoLink="web"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAudio" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="278dp"
        android:layout_height="104dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/jackartitlecredits"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSiteAudio"
        app:srcCompat="@drawable/img_title_palavra_jac_kar" />

    <TextView
        android:id="@+id/textViewJakarAndroid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/jackar_para_android"
        android:textColor="@color/colorGrey"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textViewAllRights"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="16dp"
        android:text="@string/todos_os_direitos_reservados"
        android:textColor="@color/colorGrey"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewJakarAndroid"
        app:layout_constraintVertical_bias="0.074" />

    <TextView
        android:id="@+id/textViewCredits"
        android:layout_width="218dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:text="@string/cr_ditos_tela"
        android:textAlignment="center"
        android:textColor="@color/colorGrey"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>